<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="pax">Num of Pax</string>
    <string name="discount">Discount(%)</string>
    <string name="noSVS">No SVS</string>
    <string name="SVS">SVS</string>
    <string name="GST">GST</string>
    <string name="noGST">NO GST</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="TtlBill">Total Bill: </string>
    <string name="EachPays">Each Pays: </string>

</resources>